--- a/assets/css/Annimaion.css
+++ b/assets/css/Annimaion.css
@@ -1,23 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+/*Annimation bulles*/
 .context {
     width: 100%;
     position: absolute;
     top:80vh;
     
 }
+.madi{
+    margin-top: 50px;
+    background-color: rgb(244, 240, 240);
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
 
 .context h1{
     text-align: center;
     color: #fff;
     font-size: 50px;
+    opacity: .5 ;
 }
 
 
 .area{
     background: -webkit-linear-gradient(to left, #383a57, #656bd5);  
     width: 100%;
-    height:10vh;
+    height:100%;
+    color: white;
 }
 
 .circles{   
@@ -26,7 +35,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    color: white;
+   
 }
 
 .circles li{
@@ -35,9 +45,11 @@
     list-style: none;
     width: 20px;
     height: 20px;
-    background: rgba(255, 255, 255, 0.2);
+    background:#fff;
+    opacity:.5;
     animation: animate 25s linear infinite;
     bottom: -150px;
+    z-index: 1;
     
 }
 
@@ -196,6 +208,8 @@
     }
 
 }
+/*fin annimations bulles  */
+/*Debut annimations des textes tournant */
 .truncate{
     text-align: center;
     color: #010125;
@@ -228,48 +242,173 @@
 }
 @keyframes tex{
     0%{
-        content: " NOS GARES SONT SITUEES TOUT PRES DE VOUS ";
+        content: "NOS GARES SONT SITUEES TOUT PRES DE VOUS";
     }
     50%{
-        content: " NOUS VOUS PROMETTONS DE VOUS SATISFAIRE" ;
+        content: "NOUS VOUS PROMETTONS DE VOUS SATISFAIRE" ;
     }
     100%{
-        content: "  MERCI DE NOUS FAIRE CONFIANCE  ET A TRES BIENTOT ";
+        content: "MERCI DE NOUS FAIRE CONFIANCE  ET A  BIENTOT";
     }
 }
-.auto{
-    margin-top:-80px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.h-merchandising-image{ 
-    text-align: center;
-    color: #010121;
-    text-decoration:double;
-    text-shadow: 2px 4px 6px white;
-    background-size: cover;
-    height: 200px;
-}
-.mt-3{
-        -webkit-filter: blur(3px);
-        filter: blur(1px);
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        -webkit-transition: .3s ease-in-out;
-        transition: .3s ease-in-out;
+ /*fin modification des textes annimes */
+ /* debut modification des images */
+    .son, .son1, .son2, .son3,
+    .son4, .son5, .son6, .son7,
+    .son8,.son9, .son10, .son11
+    {
+        position: relative;
+        height: 300px;
+        border: 1px solid transparent;
+        overflow: hidden;
+        border-radius: 2%;
     }
-.mt-3:hover{
-    -webkit-filter: blur(0px);
-        filter: blur(0px);
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
+    .son::before, .son1::before, .son2::before, .son3::before, .son4::before, .son5::before, .son6::before,
+    .son7::before, .son8::before, .son9::before, .son10::before, .son11::before
+    {
+        line-height: 50px;
+        font-size: 1rem;
+        font-weight: 900;
+        font-family: Arial, Helvetica, sans-serif;
+        color:#010121;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100%;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        overflow: hidden;
+        transition: all .8s;    
     }
-    .ee{
-        margin-top:-30px;
-        display: flex;
-        padding-left: 30px;
-        justify-content: space-between;
+    .son:hover::before,.son1:hover::before,.son2:hover::before,.son3:hover::before,.son4:hover::before,.son4:hover::before,
+    .son5:hover::before,.son6:hover::before,.son7:hover::before,.son8:hover::before,.son9:hover::before,.son10:hover::before,
+    .son11:hover::before
+    { 
+        transform:translateY(84%);
+        font-size: 0.5rem;
+        line-height: 55px;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .son::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/bcn.jpg);
+    }
+    .son:hover::before{ 
+        background:url(../images/gallery/bcn.jpg);
+    }
+    .son1::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son1:hover::before{ 
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son2::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son2:hover::before{ 
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son3::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son3:hover::before{ 
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son4::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son4:hover::before{ 
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son5::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son5:hover::before{ 
+        background:url(../images/gallery/bkk.jpg);
+    }
+    .son6::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/photo_2021-02-05_13-07-56.jpg);
+    }
+    .son6:hover::before{ 
+        background:url(../images/gallery/photo_2021-02-05_13-07-56.jpg);
+    }
+    .son7::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/nyc.jpg);
+    
+    }
+    .son7:hover::before{ 
+        background:url(../images/gallery/nyc.jpg);
+    }
+    .son8::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/yakro.jpg);
+    }
+    .son8:hover::before{ 
+        background:url(../images/gallery/yakro.jpg);
+    }
+    .son9::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/opo.jpg);
+    }
+    .son9:hover::before{ 
+        background:url(../images/gallery/opo.jpg);
+    }
+    .son10::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/man.jpg);
+    }
+    .son10:hover::before{ 
+        background:url(../images/gallery/man.jpg);
+    }
+    .son11::before{
+        content: 'Abidjan Adjamé';
+        background:url(../images/gallery/korhogo.jpg);
+    }
+    .son11:hover::before{ 
+        background:url(../images/gallery/korhogo.jpg);
+    }
+     /* fin des modification des images */
+     /* modificatin des textes */
+    .modif{
+        background-color: rgb(217, 209, 209);
+        height: 200%;
+        border-radius: 2%;
+
+    }
+    .title{
+        text-align: center;
+        font-size: 22px;
+        padding-top: 25%;
+    }
+    .title span{
+        font-weight: 300;
+        font-size: 30px;
+        line-height: 10px;
+    }
+    .text{
+        text-align:center;
+        line-height: 20px;
+        font-size: 14px;
+    }
+    .text_p{
+        text-align: center;
+        line-height: 20px;
+        font-size: 14px;
+        animation: t infinite 30s;
+    }
+    @keyframes t{
+        0%{
+            color: #010121;
+        }
+        100%{
+            color:rgb(227, 89, 39);
+        }
     }
